Fixed lot of bugs and added some new features

--- a/Tokenizer.vbproj
+++ b/Tokenizer.vbproj
@@ -66,6 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Describer.vb" />
+    <Compile Include="Extensions.vb" />
+    <Compile Include="FromByte.vb" />
+    <Compile Include="FromObject.vb" />
     <Compile Include="Provider.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="Parser.vb" />
